新增日志API
